--- a/ciphers/package.json
+++ b/ciphers/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "chai": "^4.2.0",
     "gh-pages": "^2.0.1",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
@@ -11,7 +12,7 @@
     "react-scripts": "2.1.5"
   },
   "scripts": {
-	"predeploy": "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -27,5 +28,10 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://SligZ7.github.io/Ciphers"
+  "homepage": "https://SligZ7.github.io/Ciphers",
+  "devDependencies": {
+    "chai-enzyme": "^1.0.0-beta.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2"
+  }
 }
