--- a/ciphers/package.json
+++ b/ciphers/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "chai": "^4.2.0",
+    "chart.js": "^2.8.0",
     "gh-pages": "^2.0.1",
-    "react": "^16.8.4",
-    "react-bootstrap": "^1.0.0-beta.5",
-    "react-dom": "^16.8.4",
-    "react-scripts": "2.1.5"
+    "jquery": "^3.4.1",
+    "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
+    "react-chartjs-2": "^2.7.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "2.1.5",
+    "typescript": "^3.4.5"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -32,6 +36,6 @@
   "devDependencies": {
     "chai-enzyme": "^1.0.0-beta.1",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2"
+    "enzyme-adapter-react-16": "^1.12.1"
   }
 }
