--- a/ciphers/package.json
+++ b/ciphers/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.0",
     "chai": "^4.2.0",
-    "chart.js": "^2.8.0",
-    "gh-pages": "^2.0.1",
-    "jquery": "^3.4.1",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.9",
-    "react-chartjs-2": "^2.7.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "2.1.5",
-    "typescript": "^3.5.2"
+    "chart.js": "^2.9.3",
+    "gh-pages": "^2.2.0",
+    "jquery": "^3.5.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-chartjs-2": "^2.9.0",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1",
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -35,7 +35,7 @@
   "homepage": "https://SligZ7.github.io/Ciphers",
   "devDependencies": {
     "chai-enzyme": "^1.0.0-beta.1",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0"
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2"
   }
 }
