--- a/ciphers/package.json
+++ b/ciphers/package.json
@@ -6,7 +6,6 @@
     "bootstrap": "^4.5.0",
     "chai": "^4.2.0",
     "chart.js": "^2.9.3",
-    "gh-pages": "^2.2.0",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -32,10 +31,11 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://SligZ7.github.io/Ciphers",
+  "homepage": "https://sligz7.github.io/Ciphers/",
   "devDependencies": {
     "chai-enzyme": "^1.0.0-beta.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2"
+    "enzyme-adapter-react-16": "^1.15.2",
+    "gh-pages": "^2.2.0"
   }
 }
